--- a/index.html
+++ b/index.html
@@ -7,7 +7,119 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <p>Welcome to your HTML page.</p>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="./index.html">WEBSTUDIO</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a>Portfolio</li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </address>
+        </li>
+        <li>
+          <address>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </address>
+        </li>
+      </ul>
+    </header>
+    <main>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Service</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="https://s3-alpha-sig.figma.com/img/54c8/b618/27d7cc162dfead836063691cf04a58cf?Expires=1742169600&amp;Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&amp;Signature=d56BzJx0cz2RavCi7NOG0soMzJYYgKp92ZWGe2TzDNXfOhZvbZSeDVi5c0EOrLwKG6SwsKTp1yzDOVKavRDXMuhFTYx3hrQ0732rl9WMpCaLd1YHyh9TicR9kqWteqDhnmY9OLhrj7PiXgoQtmgyyiiU5zaPaVjE3ka3WdhK7Rcj9Ct4g5syGKcQxz4Mw9Ktxm0KY2GYutcDdysrCggcgYUE4~3HJvNf7hbrygxeVyLHaFYBOEgkuESHnyrFrMS6UP1cl3nLDiK-22NyOEfDzyg-SdD-o4hpDKVjNpygwr8V1ynN~t~9YCGjXoucN41-N-IRao1Z0IPJOu3GdnSjUg__"
+              alt="beard_guy"
+              width="338"
+              height="460"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="https://s3-alpha-sig.figma.com/img/4ff1/cadf/8a9539bd306a71f0180d4ac75766361e?Expires=1742169600&amp;Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&amp;Signature=YjE6sZOiOmT0EtR8WIo2iJ5wMwJwYVKUfMxJNo1Bwr~KadbcAbeINOXaiu38ksPwFocuLD3YuK~TflqhruZvdrd1z3ZjBZx2-nn2s8ik0eKU2A7NHby19v0iqPdBo2s4VGKVAXH02ici0tYiqbCdQJKOiS3TMseURgoTsad~3fx~taD6CRMnXpD1de1qVuyNYcZRjoi1iVUbcn9Z~Ti3b5gyaPUR9Xbhr0esZnNritgHnvqfYY-RRG1OM6VNrxtQ6MfZ4zN694zoRN4ItN0DUB6r07SA4tdjf3PWCiKpC4ZejumU5w9AaBABJsmeiMCPwO5jwYcVop0-xXj~ze-SRQ__"
+              alt="big_smile_guy"
+              width="460"
+              height="307"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="https://s3-alpha-sig.figma.com/img/e2b4/788c/210eea8d1f5ef1a5b4db4f62aba5e8e9?Expires=1742169600&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=ryPJVi8MoBgbGumto2jbdGI3vkbOJG43NYjGCVlmbKDSdZomdUKzSZfFJNaArzTLGW3H4BfQCzozYiNh7CFfOv5ngIff1ElZQE~3na-jls8lkSc49xYD8c~8KpJZhcI0hACh2Ahu3sBfq0RRG9miVkR9cMLcyriNsHsrEr0Tl2Pa9Kfd4zwgNH5NYozYm1FTf7Igz1AXXsIQ8pTF1353YGQSc~pI2aRFfAULxCNS~92~B5DR~5tvRzWOuCvIRD2mArlr~i5AGg-8crWOCPzsGlJ9cf5a9SBJvatCTINVHHxdO23BLWKVDDXSR5Uj0YQqrXVwlBva9l21X3cKD9YimQ__"
+              alt="girl_in_pink"
+              width="460"
+              height="307"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="https://s3-alpha-sig.figma.com/img/b38e/c5de/c6daee5d9dff1c4f03f226cbaec0f164?Expires=1742169600&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=aqeNDinF3b~ZLEKV8Jbf7zpqgOtKoFst875ZfxWYw24HErdFcajKDgjnJiqvjUinGhsyeeherqxFOOQoyL7~qeXFFeG5XJpW08CFwDzzmvX0Mcs~T9z14b1vPSaDDU5R-AWzKCAqkkUvMcnlqSIAxigfUlzFI~czrep~GckMmyo3jrPyMbh-4PgZs3gHdfVh03VQv~yXDH1~eVQ0yxeEIMyhUt~yozZaBvPaZFJhImWlQQobdMsPXX51PFk-NJh5uAJr56HybdkMImudhuHy7XVdVlmBvX874RBcXnjJIT1Rrh1aqWPxFzqzZDhJLVcf9RlwvKX5lHxGVLQwxwG8oA__"
+              alt="gray-t-shirt-guy"
+              width="460"
+              height="307"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <nav>
+        <a href="./index.html">WEBSTUDIO</a>
+      </nav>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
