--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <!--moved away from the list-->
         <ul>
           <li><a href="">Studio</a></li>
@@ -70,23 +70,23 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="images/img-left.jpg" alt="beard_guy" width="264" />
+            <img src="./images/img-left.jpg" alt="beard_guy" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/img-2.jpg" alt="big_smile_guy" width="264" />
+            <img src="./images/img-2.jpg" alt="big_smile_guy" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="images/img-girl.jpg" alt="girl_in_pink" width="264" />
+            <img src="./images/img-girl.jpg" alt="girl_in_pink" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="images/img-right.jpg"
+              src="./images/img-right.jpg"
               alt="gray-t-shirt-guy"
               width="264"
             />
@@ -98,7 +98,7 @@
     </main>
     <footer>
       <nav>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
       </nav>
       <p>
         Increase the flow of customers and sales for your business with digital
