--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo">WebStudio</a>
         <!--moved away from the list-->
         <ul>
           <li><a href="">Studio</a></li>
@@ -98,7 +98,7 @@
     </main>
     <footer>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo">WebStudio</a>
       </nav>
       <p>
         Increase the flow of customers and sales for your business with digital
