--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <header>
-      <a href="./index.html" class="logo">WebStudio</a>
-      <!--moved away from the list-->
+      <div>
+        <a href="./index.html" class="logo">WebStudio</a>
+      </div>
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
@@ -97,7 +98,9 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html" class="logo">WebStudio</a>
+      <div>
+        <a href="./index.html" class="logo">WebStudio</a>
+      </div>
 
       <p>
         Increase the flow of customers and sales for your business with digital
