--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
       <div>
         <a href="./index.html" class="logo">WebStudio</a>
       </div>
-      <ul>
-        <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a>Portfolio</li>
-        <li><a href="">Contacts</a></li>
-      </ul>
-
+      <nav>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a>Portfolio</li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
       <address>
         <ul>
           <li>
@@ -97,9 +98,7 @@
       </section>
     </main>
     <footer>
-      <div>
-        <a href="./index.html" class="logo">WebStudio</a>
-      </div>
+      <a href="./index.html" class="logo">WebStudio</a>
 
       <p>
         Increase the flow of customers and sales for your business with digital
